# Orchestr8_jr

./: .contextignore  .gitignore  .mcp.json  CLAUDE.md  OPUS_HANDOFF_PROMPT.md  README.AGENTS  ROADMAP_ORCHESTR8_V4.md  SOT.md  TROUBLESHOOTING_REPORT.md  The_Story_of_Mingos_A_Tale_of_Emergence.md  ben_rev.md  combat_state.json  generated_code_city_preview.html  notebook.py  orchestr8.py  orchestr8_settings.toml  orchestr8_standalone.py  pyproject.toml  pyproject_orchestr8_settings.toml
.louis-control/: louis-config.json
.memory/: ANALYSIS_Carl_Contextualizer.md  ANALYSIS_Combat_Tracking.md  ANALYSIS_Connection_Verifier.md  ANALYSIS_Terminal_Spawner.md
.orchestr8/: .gitignore  combat_state.json
.planning/: EXECUTION-PLAYBOOK.md  PLANNING-NOTES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VISION-ALIGNMENT.md  config.json
.taskmaster/: config.json  state.json
Agent Deployment Strategy/: AGENT_DEF_DEPLOYMENT_STRATEGIST.md  AGENT_DEF_EPO_HUMAN_ADVOCACY.md  AGENT_DEF_FIXER.md  AGENT_DEF_GIT_COMMIT.md  AGENT_DEF_MAIN_CONTEXT.md  AGENT_DEF_ORCHESTRATOR.md  AGENT_DEF_REPORTER.md  AGENT_DEF_SCOUT.md  AGENT_DEF_SYNTHESIZER.md  AGENT_DEF_VALIDATOR.md
Archive/: .gitignore
Barradeau/: Architect.txt  HANDOFF_PROMPT.md  IP maestro py The Brain.md  VOID_SPEC_ROADMAP.md  barradeau-builder.html  barradeau-buildings.html  void-phase0-buildings.html
Big Pickle/: CLAUDE_EXECUTION_PROMPT.md  COMBAT_TRACKER_TASK.md  EMERGENCE_ANIMATION_CATALOG.md  WOVEN_MAPS_EXECUTION_SPEC.md  ZED_INTEGRATION_PLAN.md
Context King/: # 👑 EMPEROR'S DECREE: The Orchestr8 Coo.md
(+1825 files in other folders)
