[project]
name = "orchestr8"
version = "0.1.0"
description = "Orchestr8 - Reactive Python dashboard for software project visualization"
authors = [{name = "Orchestr8 Team"}]
requires-python = ">=3.8"
dependencies = [
    "marimo>=0.19.0",
    "pandas>=1.0.0",
    "networkx>=2.0.0",
    "pyvis>=0.1.9",
    "jinja2>=3.0.0",
    "fastmcp>=2.0.0"
]

[project.scripts]
orchestr8-mcp = "orchestr8_mcp:mcp.run"

[tool.marimo.display]
custom_css = ["IP/styles/orchestr8.css"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"